--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+body{
+    background-color: blue;
+    display: flex;
+    flex-wrap: wrap;
+}
+.card{
+    width: 400px;
+    background-color: white;
+    margin: 20px;
+    border: 1px solid black;
+    border-radius: 10px;
+    transition: 0.4s;
+    padding:10px ;
+}
+.card:hover{
+    width: 420px;
+    box-shadow: 0 0 10px #222222;
+}
+img{
+    width: 100%;
+    border-radius: 10px;
+}
+.text{
+    padding: 20px;
+}
+h2{
+    font-size: 26px;
+    color: red;
+}
+p{
+    color: red;
+    margin-bottom: 40px;
+}
+a{
+    background-color: greenyellow;
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    margin-bottom: 15px ;
+    margin-top: 15px;
+}
+a:hover{
+    background-color: aquamarine;
+}
 
